--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,4 +26,4 @@ jobs:
         run: /usr/bin/xcodebuild -version
 
       - name: Build and Test
-        run: xcodebuild clean build test -scheme "SalesTracker" -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator,name=iPhone 16" ONLY_ACTIVE_ARCH=YES
+        run: cd SalesTracker && xcodebuild clean build test -scheme "SalesTracker" -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator,name=iPhone 16" ONLY_ACTIVE_ARCH=YES
