--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,10 +19,11 @@ jobs:
       - name: macos version
         run: sw_vers
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Select Xcode
-        run: sudo xcode-select -switch /Applications/Xcode_16.1.app
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
 
       - name: Xcode version
         run: /usr/bin/xcodebuild -version
