--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Build and Test
       
-        run: cd SalesTracker && xcodebuild clean build test -scheme "SalesTracker" -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator" ONLY_ACTIVE_ARCH=YES
+        run: cd SalesTracker && xcodebuild clean build test -scheme "SalesTracker" -sdk iphonesimulator -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator,name=iPhone 16" ONLY_ACTIVE_ARCH=YES
