--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,11 +23,11 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.4'
+          xcode-version: '16.4'
 
       - name: Xcode version
         run: /usr/bin/xcodebuild -version
 
       - name: Build and Test
       
-        run: cd SalesTracker && xcodebuild clean build test -scheme "SalesTracker" -sdk iphonesimulator -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator,name=iPhone 15,OS=17.5" ONLY_ACTIVE_ARCH=YES
+        run: cd SalesTracker && xcodebuild clean build test -scheme "SalesTracker" -sdk iphonesimulator -configuration Debug CODE_SIGNING_REQUIRED=NO -destination "platform=iOS Simulator,name=iPhone 16" ONLY_ACTIVE_ARCH=YES
